# ROS2_JETSON

./: .gitignore  CLAUDE.md  Makefile  README.md  RL_TRAINING_GUIDE.md  SETUP_COMPLETE.md  gazebo_room_env.py  requirements-rl.txt  test_service.py  train_rl.py
.claude/: settings.json  settings.local.json
scripts/: rl_menu.sh
src/rccar_bringup/: CMakeLists.txt  package.xml
src/rccar_bringup/launch/: real.launch.py  sim.launch.py
src/rccar_control/: CMakeLists.txt  package.xml
src/rccar_control/launch/: control.launch.py
src/rccar_control/rccar_control/: __init__.py  gamepad_node.py  mecanum_controller.py
src/rccar_description/: CMakeLists.txt  package.xml
src/rccar_description/urdf/: rccar.urdf.xacro
src/rccar_gazebo/: CMakeLists.txt  package.xml
src/rccar_gazebo/launch/: gazebo.launch.py
src/rccar_gazebo/worlds/: bookstore.world
src/rccar_rl/: CMakeLists.txt  package.xml
src/rccar_rl/rccar_rl/: __init__.py  gazebo_room_env.py  monitor_training.py  train_rl.py
urdf/: rccar.urdf.xacro  rccar_sim.urdf.xacro
