<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rccar_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for the RC-Car serving robot</description>
  <maintainer email="user@jetson.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rccar_description</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rccar_description</exec_depend>
  <exec_depend>rccar_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
